From JSON and tests